# packages/shared/src/api/index.ts
@@ -1,4 +1,6 @@
 export * from "./common"
+export * from "./feedback"
 export * from "./organizations"
 export * from "./primitives"
-export { buildOpenApiDocument, registry } from "./registry"
+export * from "./status"
+export { API_VERSION, buildOpenApiDocument, registry } from "./registry"
